chore: running SS e2e against containerised env (#2674)
* chore: add serverconf init image creation

Refs: XRDDEV-2837

* chore: fix proxy-ui-api logback configuration

Refs: XRDDEV-2837

* chore: move jetty config to different module

Refs: XRDDEV-2837

* chore: move jetty config to different module

Refs: XRDDEV-2837

* chore: enable quarkus jib for proxy and confclient

Refs: XRDDEV-2837

* chore: add messagelog-db init module

Refs: XRDDEV-2837

* chore: improve signer initialization

Refs: XRDDEV-2837

* chore: enable ui container

Refs: XRDDEV-2837

* chore: add tmp intellij workaround for import ordering

Refs: XRDDEV-2837

* chore: fix UI packaging

Refs: XRDDEV-2837

* chore: small fixes

Refs: XRDDEV-2837

* chore: motitor container and small fixes

Refs: XRDDEV-2837

* chore: security-server-url moved to application properties

Refs: XRDDEV-2837

* chore: minor null fix

Refs: XRDDEV-2837

* chore: generate_gpg_keypair.sh script added

Refs: XRDDEV-2837

* chore: folder /var/cache/xroad in docker base img

Refs: XRDDEV-2837

* chore: running SS e2e against containerized env

Refs: XRDDEV-2837

* chore: using HTTPS_NO_AUTH for management requests from UI to proxy

Refs: XRDDEV-2837

* chore: use registry for BuildAndPackageWithUnitTests CI job

Refs: XRDDEV-2837

* chore: github ci - build base images

Refs: XRDDEV-2837

* chore: base images build fix

Refs: XRDDEV-2837

* chore: github ci upload, downlaod docker images for e2e

Refs: XRDDEV-2837

* chore: message-log-archiver-application split into coreand application

Refs: XRDDEV-2837

* chore: ci - pull docker images before save

Refs: XRDDEV-2837

* chore: using github env file for e2e

Refs: XRDDEV-2837

* chore: using ${{ runner.temp }} in github ci

Refs: XRDDEV-2837

* chore: clean up

Refs: XRDDEV-2837

* chore: script fix

Refs: XRDDEV-2837

* chore: missing monitor image

Refs: XRDDEV-2837

* chore: temporary skipping building  rhel images and system tests

Refs: XRDDEV-2837

* chore: minor fix

--- a/src/common/common-properties/src/main/resources/xroad-common.yaml
+++ b/src/common/common-properties/src/main/resources/xroad-common.yaml
@@ -14,7 +14,6 @@ quarkus:
     enabled: false
   http:
     host-enabled: false
-
 spring:
   main:
     banner-mode: log
@@ -27,6 +26,16 @@ spring:
       token: ${XROAD_SECRET_STORE_TOKEN}
       kv:
         enabled: false
+
+"%containerized":
+  quarkus:
+    http:
+      port: 4099
+      host-enabled: true
+  xroad:
+    common:
+      global-conf:
+        source: REMOTE
 
 logging:
   level:
