--- a/src/security-server/system-test/build.gradle
+++ b/src/security-server/system-test/build.gradle
@@ -1,6 +1,7 @@
 dependencies {
     intTestImplementation project(":security-server:openapi-model")
     intTestImplementation project(":addons:proxymonitor-common")
+    intTestImplementation project(":op-monitor-daemon:core")
 
     intTestImplementation project(":common:common-int-test")
     intTestImplementation(libs.testAutomation.assert)
