--- a/ansible/roles/xroad-hurl/files/hurl.env
+++ b/ansible/roles/xroad-hurl/files/hurl.env
@@ -2,6 +2,8 @@ cs_host=xrd-cs
 ca_host=xrd-ca
 ss0_host=xrd-ss0
 ss1_host=xrd-ss1
+ss0_proxy=xrd-ss0
+ss1_proxy=xrd-ss1
 
 example_service_wsdl=http://xrd-is:8080/example-adapter/Endpoint?wsdl
 example_service_address=http://xrd-is:8080/example-adapter/Endpoint
