fix: minor fixes
Refs: XRDDEV-2840

--- a/src/security-server/system-test/src/intTest/resources/container-files/etc/xroad/conf.d/local.ini
+++ b/src/security-server/system-test/src/intTest/resources/container-files/etc/xroad/conf.d/local.ini
@@ -22,3 +22,9 @@ messagelog-key-id=key1
 archive-encryption-enabled=true
 [signer]
 enforce-token-pin-policy=true
+[op-monitor]
+records-available-timestamp-offset-seconds=1
+[op-monitor-buffer]
+socket-timeout-seconds=1
+[op-monitor-service]
+socket-timeout-seconds=1
