chore: running SS system tests on containers
Refs: XRDDEV-2854

--- a/deployment/security-server/docker/base/Dockerfile-ui-baseline
+++ b/deployment/security-server/docker/base/Dockerfile-ui-baseline
@@ -14,3 +14,10 @@ RUN usermod --append -G shadow xroad && \
     usermod -a -G xroad-registration-officer xrd && \
     usermod -a -G xroad-service-administrator xrd && \
     usermod -a -G xroad-securityserver-observer xrd
+
+ARG USER_PASSWD=secret
+RUN useradd xrd-sec && adduser xrd-sec xroad-security-officer && sh -c "echo 'xrd-sec:$USER_PASSWD' | chpasswd" \
+    && useradd xrd-reg && adduser xrd-reg xroad-registration-officer && sh -c "echo 'xrd-reg:$USER_PASSWD' | chpasswd" \
+    && useradd xrd-ser && adduser xrd-ser xroad-service-administrator && sh -c "echo 'xrd-ser:$USER_PASSWD' | chpasswd" \
+    && useradd xrd-sys && adduser xrd-sys xroad-system-administrator && sh -c "echo 'xrd-sys:$USER_PASSWD' | chpasswd" \
+    && useradd xrd-obs && adduser xrd-obs xroad-securityserver-observer && sh -c "echo 'xrd-obs:$USER_PASSWD' | chpasswd"
