--- a/deployment/security-server/docker/.env.github
+++ b/deployment/security-server/docker/.env.github
@@ -3,8 +3,10 @@ PROXY_IMG=localhost:5000/ss-proxy:latest
 PROXY_UI_IMG=localhost:5000/ss-proxy-ui-api:latest
 SIGNER_IMG=localhost:5000/ss-signer:latest
 MONITOR_IMG=localhost:5000/ss-monitor:latest
+OP_MONITOR_IMG=localhost:5000/ss-op-monitor:latest
 
 SERVERCONF_INIT_IMG=localhost:5000/ss-db-serverconf-init:latest
 MESSAGELOG_INIT_IMG=localhost:5000/ss-db-messagelog-init:latest
+OP_MONITOR_INIT_IMG=localhost:5000/ss-db-opmonitor-init:latest
 
 XROAD_SECRET_STORE_TOKEN=bao-root-token
