chore: replace nginx ingress with kubectl port forwarding

--- a/deployment/security-server/k8s/charts/security_server/values.yaml
+++ b/deployment/security-server/k8s/charts/security_server/values.yaml
@@ -94,8 +94,10 @@ services:
         name: http
       - port: 5567
         name: grpc
-      - port: 8443
+      - port: 8080
         name: proxy-http
+      - port: 8443
+        name: proxy-https
     readinessProbe:
       path: "/q/health"
       scheme: "HTTP"
