--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -208,7 +208,7 @@ jobs:
         uses: actions/upload-artifact@v4
         if: failure()
         with:
-          name: SS System Test report
+          name: CS System Test report
           path: |
             src/central-server/admin-service/ui-system-test/build/allure-report/
   RunSSSystemTests:
