--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -97,23 +97,23 @@ jobs:
 #        run: docker build -t rhel8 ${{ github.workspace }}/src/packages/docker/rpm-el8/ && docker run --rm -u $(id -u ${USER}):$(id -g ${USER}) -v /etc/passwd:/etc/passwd:ro -v /etc/group:/etc/group:ro -v ${{ github.workspace }}:/workspace rhel8 ./src/packages/build-rpm.sh
 #      - name: Build RHEL9 packages
 #        run: docker build -t rhel9 ${{ github.workspace }}/src/packages/docker/rpm-el9/ && docker run --rm -u $(id -u ${USER}):$(id -g ${USER}) -v /etc/passwd:/etc/passwd:ro -v /etc/group:/etc/group:ro -v ${{ github.workspace }}:/workspace rhel9 ./src/packages/build-rpm.sh
-      - name: Build 22.04 (Jammy) packages
-        env:
-          DEBEMAIL: 'info@niis.org'
-          DEBFULLNAME: 'NIIS'
-        run: ./src/packages/build-deb.sh jammy -release
+#      - name: Build 22.04 (Jammy) packages
+#        env:
+#          DEBEMAIL: 'info@niis.org'
+#          DEBFULLNAME: 'NIIS'
+#        run: ./src/packages/build-deb.sh jammy -release
 #        todo: revert after testing
 #      - name: Build 24.04 (Noble) packages
 #        env:
 #          DEBEMAIL: 'info@niis.org'
 #          DEBFULLNAME: 'NIIS'
 #        run: ./src/packages/build-deb.sh noble -release
-      - name: Store deb files for system tests
-        uses: actions/upload-artifact@v4
-        with:
-          name: debian-packages
-          path: src/packages/build/ubuntu22.04/*.deb
-          compression-level: 0 #No point in compressing these
+#      - name: Store deb files for system tests
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: debian-packages
+#          path: src/packages/build/ubuntu22.04/*.deb
+#          compression-level: 0 #No point in compressing these
       - name: Clean build packages #otherwise might run out of disk space in the next steps
         run: |
           rm -rf src/packages/build
@@ -144,73 +144,75 @@ jobs:
         with:
           name: docker-images
           path: ${{ runner.temp }}/docker-images
-  RunCSSystemTests:
-    name: Run Central Server system tests
-    needs: BuildAndPackageWithUnitTests
-    runs-on: ubuntu-22.04
-    services:
-      registry:
-        image: registry:2
-        ports:
-          - 5000:5000
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
-        with:
-          java-version: '21'
-          distribution: 'temurin'
-      - name: Set up Gradle
-        uses: gradle/actions/setup-gradle@v4
-        with:
-          cache-read-only: true
-      - name: Initialize docker setup
-        working-directory: ./Docker/centralserver
-        run: ./init_context.sh
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-        with:
-          driver-opts: network=host
-      - name: Download debian packages
-        uses: actions/download-artifact@v4
-        with:
-          name: debian-packages
-          path: ./Docker/centralserver/build/packages/
-      - name: List docker build files
-        run: ls -lah ./Docker/centralserver/build
-      - name: Build CS docker image
-        uses: docker/build-push-action@v6
-        with:
-          context: ./Docker/centralserver/
-          push: true
-          build-args: |
-            PACKAGE_SOURCE=internal
-          tags: localhost:5000/xrd-centralserver:${{ github.sha }}
-      - name: Run Central Server system tests
-        working-directory: ./src
-        run: ./gradlew -Dorg.gradle.jvmargs=-Xmx1g :central-server:admin-service:ui-system-test:systemTest -PsystemTestCsImageName=localhost:5000/xrd-centralserver:${{ github.sha }}
-      - name: Test report
-        env:
-          NODE_OPTIONS: '--max-old-space-size=6144'
-        uses: dorny/test-reporter@v1
-        if: success() || failure()
-        with:
-          name: Central Server system test
-          path: src/central-server/admin-service/ui-system-test/build/test-results/**/TEST-*.xml
-          reporter: java-junit
-      - name: Upload CS screenshots
-        if: failure()
-        uses: actions/upload-artifact@v4
-        with:
-          name: CS System Test screenshots
-          path: src/central-server/admin-service/ui-system-test/build/reports/test-automation/selenide-failures/*.png
-      - name: Upload CS report
-        uses: actions/upload-artifact@v4
-        if: failure()
-        with:
-          name: CS System Test report
-          path: |
-            src/central-server/admin-service/ui-system-test/build/allure-report/
+
+  #        todo: revert after testing
+#  RunCSSystemTests:
+#    name: Run Central Server system tests
+#    needs: BuildAndPackageWithUnitTests
+#    runs-on: ubuntu-22.04
+#    services:
+#      registry:
+#        image: registry:2
+#        ports:
+#          - 5000:5000
+#    steps:
+#      - uses: actions/checkout@v4
+#      - name: Set up JDK 21
+#        uses: actions/setup-java@v4
+#        with:
+#          java-version: '21'
+#          distribution: 'temurin'
+#      - name: Set up Gradle
+#        uses: gradle/actions/setup-gradle@v4
+#        with:
+#          cache-read-only: true
+#      - name: Initialize docker setup
+#        working-directory: ./Docker/centralserver
+#        run: ./init_context.sh
+#      - name: Set up Docker Buildx
+#        uses: docker/setup-buildx-action@v3
+#        with:
+#          driver-opts: network=host
+#      - name: Download debian packages
+#        uses: actions/download-artifact@v4
+#        with:
+#          name: debian-packages
+#          path: ./Docker/centralserver/build/packages/
+#      - name: List docker build files
+#        run: ls -lah ./Docker/centralserver/build
+#      - name: Build CS docker image
+#        uses: docker/build-push-action@v6
+#        with:
+#          context: ./Docker/centralserver/
+#          push: true
+#          build-args: |
+#            PACKAGE_SOURCE=internal
+#          tags: localhost:5000/xrd-centralserver:${{ github.sha }}
+#      - name: Run Central Server system tests
+#        working-directory: ./src
+#        run: ./gradlew -Dorg.gradle.jvmargs=-Xmx1g :central-server:admin-service:ui-system-test:systemTest -PsystemTestCsImageName=localhost:5000/xrd-centralserver:${{ github.sha }}
+#      - name: Test report
+#        env:
+#          NODE_OPTIONS: '--max-old-space-size=6144'
+#        uses: dorny/test-reporter@v1
+#        if: success() || failure()
+#        with:
+#          name: Central Server system test
+#          path: src/central-server/admin-service/ui-system-test/build/test-results/**/TEST-*.xml
+#          reporter: java-junit
+#      - name: Upload CS screenshots
+#        if: failure()
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: CS System Test screenshots
+#          path: src/central-server/admin-service/ui-system-test/build/reports/test-automation/selenide-failures/*.png
+#      - name: Upload CS report
+#        uses: actions/upload-artifact@v4
+#        if: failure()
+#        with:
+#          name: CS System Test report
+#          path: |
+#            src/central-server/admin-service/ui-system-test/build/allure-report/
   RunSSSystemTests:
     name: Run Security Server system tests
     needs: BuildAndPackageWithUnitTests
@@ -288,98 +290,101 @@ jobs:
         with:
           name: SS System Test report
           path: |
+            src/security-server/system-test/build/a2c_logs/
             src/security-server/system-test/build/allure-report/
             src/security-server/system-test/build/container-logs/
             src/security-server/system-test/build/reports/test-automation/selenide-failures/*.png
-  RunE2ETests:
-    name: Run E2E tests
-    needs: BuildAndPackageWithUnitTests
-    runs-on: ubuntu-22.04
-    services:
-      registry:
-        image: registry:2
-        ports:
-          - 5000:5000
-    steps:
-      # Setup
-      - uses: actions/checkout@v4
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
-        with:
-          java-version: '21'
-          distribution: 'temurin'
-      - name: Set up Gradle
-        uses: gradle/actions/setup-gradle@v4
-        with:
-          cache-read-only: true
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-        with:
-          driver-opts: network=host
-      # Build Central Server
-      - name: Initialize CS docker setup
-        working-directory: ./Docker/centralserver
-        run: ./init_context.sh
-      - name: Download debian packages for CS
-        uses: actions/download-artifact@v4
-        with:
-          name: debian-packages
-          path: ./Docker/centralserver/build/packages/
-      - name: Build CS docker image
-        uses: docker/build-push-action@v6
-        with:
-          context: ./Docker/centralserver/
-          push: true
-          build-args: |
-            PACKAGE_SOURCE=internal
-          tags: localhost:5000/xrd-centralserver:${{ github.sha }}
-      # Build Security Server
-#      - name: Initialize SS docker setup
-#        working-directory: ./Docker/securityserver
+
+#        todo: revert after testing
+#  RunE2ETests:
+#    name: Run E2E tests
+#    needs: BuildAndPackageWithUnitTests
+#    runs-on: ubuntu-22.04
+#    services:
+#      registry:
+#        image: registry:2
+#        ports:
+#          - 5000:5000
+#    steps:
+#      # Setup
+#      - uses: actions/checkout@v4
+#      - name: Set up JDK 21
+#        uses: actions/setup-java@v4
+#        with:
+#          java-version: '21'
+#          distribution: 'temurin'
+#      - name: Set up Gradle
+#        uses: gradle/actions/setup-gradle@v4
+#        with:
+#          cache-read-only: true
+#      - name: Set up Docker Buildx
+#        uses: docker/setup-buildx-action@v3
+#        with:
+#          driver-opts: network=host
+#      # Build Central Server
+#      - name: Initialize CS docker setup
+#        working-directory: ./Docker/centralserver
 #        run: ./init_context.sh
-#      - name: Copy debian packages for SS
-#        run: cp ./Docker/centralserver/build/packages/* ./Docker/securityserver/build/packages/
-#      - name: Build SS docker image
+#      - name: Download debian packages for CS
+#        uses: actions/download-artifact@v4
+#        with:
+#          name: debian-packages
+#          path: ./Docker/centralserver/build/packages/
+#      - name: Build CS docker image
 #        uses: docker/build-push-action@v6
 #        with:
-#          context: ./Docker/securityserver/
+#          context: ./Docker/centralserver/
 #          push: true
 #          build-args: |
 #            PACKAGE_SOURCE=internal
-#          tags: localhost:5000/xrd-securityserver:${{ github.sha }}
-      - name: Download SS docker images
-        uses: actions/download-artifact@v4
-        with:
-          name: docker-images
-          path: ${{ runner.temp }}/docker-images
-      - name: Load SS docker images into registry
-        run: |
-          for tar in ${{ runner.temp }}/docker-images/*.tar; do
-            echo "Processing $tar..."
-            IMAGE_ID=$(docker load -i "$tar" | awk '/Loaded image:/ {print $NF}')
-            docker push "$IMAGE_ID"
-          done
-      # Execute and report
-      - name: Run E2E tests
-        working-directory: ./src
-        run: |
-          mv -f ../deployment/security-server/docker/.env.github ../deployment/security-server/docker/.env
-          docker network create xroad-network
-          ./gradlew -Dorg.gradle.jvmargs=-Xmx1g :security-server:e2e-test:e2eTest -Pe2eTestCSImage=localhost:5000/xrd-centralserver:${{ github.sha }}
-#          -Pe2eTestSSImage=localhost:5000/xrd-securityserver:${{ github.sha }}
-      - name: Test report
-        env:
-          NODE_OPTIONS: '--max-old-space-size=6144'
-        uses: dorny/test-reporter@v1
-        if: success() || failure()
-        with:
-          name: E2E tests
-          path: src/security-server/e2e-test/build/test-results/**/TEST-*.xml
-          reporter: java-junit
-      - name: Upload E2E report
-        uses: actions/upload-artifact@v4
-        if: failure()
-        with:
-          name: E2E report
-          path: |
-            src/security-server/e2e-test/build/allure-report/
+#          tags: localhost:5000/xrd-centralserver:${{ github.sha }}
+#      # Build Security Server
+##      - name: Initialize SS docker setup
+##        working-directory: ./Docker/securityserver
+##        run: ./init_context.sh
+##      - name: Copy debian packages for SS
+##        run: cp ./Docker/centralserver/build/packages/* ./Docker/securityserver/build/packages/
+##      - name: Build SS docker image
+##        uses: docker/build-push-action@v6
+##        with:
+##          context: ./Docker/securityserver/
+##          push: true
+##          build-args: |
+##            PACKAGE_SOURCE=internal
+##          tags: localhost:5000/xrd-securityserver:${{ github.sha }}
+#      - name: Download SS docker images
+#        uses: actions/download-artifact@v4
+#        with:
+#          name: docker-images
+#          path: ${{ runner.temp }}/docker-images
+#      - name: Load SS docker images into registry
+#        run: |
+#          for tar in ${{ runner.temp }}/docker-images/*.tar; do
+#            echo "Processing $tar..."
+#            IMAGE_ID=$(docker load -i "$tar" | awk '/Loaded image:/ {print $NF}')
+#            docker push "$IMAGE_ID"
+#          done
+#      # Execute and report
+#      - name: Run E2E tests
+#        working-directory: ./src
+#        run: |
+#          mv -f ../deployment/security-server/docker/.env.github ../deployment/security-server/docker/.env
+#          docker network create xroad-network
+#          ./gradlew -Dorg.gradle.jvmargs=-Xmx1g :security-server:e2e-test:e2eTest -Pe2eTestCSImage=localhost:5000/xrd-centralserver:${{ github.sha }}
+##          -Pe2eTestSSImage=localhost:5000/xrd-securityserver:${{ github.sha }}
+#      - name: Test report
+#        env:
+#          NODE_OPTIONS: '--max-old-space-size=6144'
+#        uses: dorny/test-reporter@v1
+#        if: success() || failure()
+#        with:
+#          name: E2E tests
+#          path: src/security-server/e2e-test/build/test-results/**/TEST-*.xml
+#          reporter: java-junit
+#      - name: Upload E2E report
+#        uses: actions/upload-artifact@v4
+#        if: failure()
+#        with:
+#          name: E2E report
+#          path: |
+#            src/security-server/e2e-test/build/allure-report/
