--- a/src/security-server/system-test/src/intTest/resources/container-files/etc/xroad/conf.d/local.yaml
+++ b/src/security-server/system-test/src/intTest/resources/container-files/etc/xroad/conf.d/local.yaml
@@ -26,7 +26,7 @@ xroad:
     rate-limit-requests-per-second: 100
     rate-limit-requests-per-minute: 1000
     acme-challenge-port-enabled: true
-    wsdl-validator-command: #todo: /usr/share/xroad/wsdlvalidator/bin/wsdlvalidator_wrapper.sh
+    wsdl-validator-command: /usr/share/xroad/wsdlvalidator/bin/wsdlvalidator_wrapper.sh
     automatic-activate-acme-sign-certificate: true
   message-log:
     messagelog-encryption-enabled: true
