fix: adding comments Refs: XRDDEV-2840

--- a/src/security-server/system-test/src/intTest/resources/container-files/etc/xroad/conf.d/local.ini
+++ b/src/security-server/system-test/src/intTest/resources/container-files/etc/xroad/conf.d/local.ini
@@ -22,6 +22,7 @@ messagelog-key-id=key1
 archive-encryption-enabled=true
 [signer]
 enforce-token-pin-policy=true
+# we shorten REST message processing here from 1 min to 1 second
 [op-monitor]
 records-available-timestamp-offset-seconds=1
 [op-monitor-buffer]
