feat: the rest path never logged on the consumer side and on the producer side only the rest path of the saved endpoints is logged (#2691)
* feat: the rest path never logged on the consumer side and on the producer side only the rest path of the saved endpoints is logged

Refs: XRDDEV-2840

* docs: operational monitoring document changes

Refs: XRDDEV-2840

* fix: adding comments

Refs: XRDDEV-2840

--- a/src/security-server/system-test/src/intTest/resources/container-files/etc/xroad/conf.d/local.ini
+++ b/src/security-server/system-test/src/intTest/resources/container-files/etc/xroad/conf.d/local.ini
@@ -22,3 +22,10 @@ messagelog-key-id=key1
 archive-encryption-enabled=true
 [signer]
 enforce-token-pin-policy=true
+# we shorten here messages processing from 1 min to 1 second
+[op-monitor]
+records-available-timestamp-offset-seconds=1
+[op-monitor-buffer]
+socket-timeout-seconds=1
+[op-monitor-service]
+socket-timeout-seconds=1
