--- a/Docker/test-services/payloadgen/Cargo.toml
+++ b/Docker/test-services/payloadgen/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "payloadgen"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Jarkko Hyöty <jarkko.hyoty@gofore.com>"]
 edition = "2018"
 
 [dependencies]
-rocket = "0.5.0-rc.1"
-serde = { version = "1.0" }
-rand = { version = "0.8.0", features = ["small_rng"]}
+rocket = "0.5.1"
+serde = { version = "1.0.188" }
+rand = { version = "0.8.5", features = ["small_rng"] }
