chore: Add an option to deploy op-monitor in the cluster

--- a/deployment/security-server/k8s/charts/external-service-bridge/Chart.yaml
+++ b/deployment/security-server/k8s/charts/external-service-bridge/Chart.yaml
@@ -1,6 +1,5 @@
-# Chart.yaml
 apiVersion: v2
-name: external_service_bridge
+name: external-service-bridge
 description: Helm chart for external service configuration
 version: 0.1.0
 type: application
