--- a/deployment/security-server/k8s/charts/security-server/values.yaml
+++ b/deployment/security-server/k8s/charts/security-server/values.yaml
@@ -5,7 +5,7 @@ init:
     host: "db-serverconf.ss.svc.cluster.local"
     port: "5432"
     database: "serverconf"
-    db_username: "serverconf"
+    username: "serverconf"
     schema: "public"
   messagelog:
     image: localhost:5555/ss-db-messagelog-init:latest
@@ -13,8 +13,17 @@ init:
     host: "db-messagelog.ss.svc.cluster.local"
     port: "5432"
     database: "messagelog"
-    db_username: "messagelog"
+    username: "messagelog"
     schema: "public"
+  opmonitor:
+    image: localhost:5555/ss-db-opmonitor-init:latest
+    imagePullPolicy: IfNotPresent
+    host: "db-opmonitor.ss.svc.cluster.local"
+    port: "5432"
+    database: "op-monitor"
+    username: "opmonitor"
+    schema: "public"
+
 
 serviceAccount:
   name: "ss-init-sa"
@@ -90,6 +99,10 @@ services:
         name: http
       - port: 5567
         name: grpc
+      - port: 5500
+        name: proxy-server
+      - port: 5577
+        name: proxy-ocsp
       - port: 8080
         name: proxy-http
       - port: 8443
@@ -105,6 +118,8 @@ services:
       XROAD_SECRET_STORE_SCHEME: "http"
       XROAD_COMMON_RPC_CHANNEL_CONFIGURATION_CLIENT_HOST: "configuration-client.ss.svc.cluster.local"
       XROAD_COMMON_RPC_CHANNEL_SIGNER_HOST: "signer.ss.svc.cluster.local"
+      XROAD_OP_MONITOR_HOST: "op-monitor.ss.svc.cluster.local"
+      XROAD_OP_MONITOR_SCHEME: https
       XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_URL: "jdbc:postgresql://db-serverconf.ss.svc.cluster.local:5432/serverconf"
       XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_USERNAME: "serverconf"
       XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_DRIVER_CLASS: "org.postgresql.Driver"
@@ -219,4 +234,42 @@ services:
         key: "XROAD_SECRET_STORE_TOKEN"
       - name: "XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_PASSWORD"
         secretName: "db-serverconf"
+        key: "password"
+  op-monitor:
+    enabled: false
+    image: localhost:5555/ss-op-monitor:latest
+    imagePullPolicy: IfNotPresent
+    resources:
+      requests:
+        memory: 64Mi
+      limits:
+        memory: 512Mi
+    ports:
+      - port: 4099
+        name: http
+      - port: 2080
+        name: opmon-daemon
+    debugPort: 9999
+    readinessProbe:
+      path: "/q/health"
+      scheme: "HTTP"
+    serviceAccount:
+      annotations: { }
+    env:
+      DEBUG_PORT: "9999"
+      XROAD_HOST: "opmonitor.ss.svc.cluster.local"
+      XROAD_OP_MONITOR_LISTEN_ADDRESS: 0.0.0.0
+      XROAD_OP_MONITOR_SCHEME: https
+      XROAD_SECRET_STORE_HOST: "openbao.ss.svc.cluster.local"
+      XROAD_SECRET_STORE_SCHEME: "http"
+      XROAD_COMMON_RPC_CHANNEL_CONFIGURATION_CLIENT_HOST: "configuration-client.ss.svc.cluster.local"
+      "xroad.db.op-monitor.hibernate.connection.url": "jdbc:postgresql://db-opmonitor.ss.svc.cluster.local:5432/op-monitor"
+      "xroad.db.op-monitor.hibernate.connection.username": "opmonitor"
+      "xroad.db.op-monitor.hibernate.connection.driver_class": "org.postgresql.Driver"
+    envFromSecrets:
+      - name: "XROAD_SECRET_STORE_TOKEN"
+        secretName: "xroad-token"
+        key: "XROAD_SECRET_STORE_TOKEN"
+      - name: "xroad.db.op-monitor.hibernate.connection.password"
+        secretName: "db-opmonitor"
         key: "password"
